# FastAPI_OTEL-LGTM

./: .env.example  .gitignore  README.md  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml
nginx/: Dockerfile  nginx.conf
observability/grafana/dashboards/: example_dashboard.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
services/base/: Dockerfile  loadtest.py  main.py  pyproject.toml  telemetry.py
services/service_b/: .dockerignore  Dockerfile  main.py  pyproject.toml  telemetry.py
